--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
-  "buildCommand": "pip install -r requirements.txt",
+  "builds": [
+    {
+      "src": "Echoguard/fastapi_app.py",
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
